project/crudster/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudster-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudster
  template:
    metadata:
      labels:
        app: crudster
    spec:
      volumes:
        - name: shared-images
          emptyDir: {}
      containers:
        - name: crudster
          image: ananaa/crudster:113
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-images
              mountPath: "/app/files"
