project/crudster/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crudster-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: crudster-svc
              servicePort: 1234
